add support for TS Studio export file on timetable add new openapi support and add location
